# StinkySpy

./: .gitignore  ONI_CALCULATOR_PROJECT_PLAN.md  README.md
.claude/skills/ONI Calculator/: SKILL.md
.claude/skills/Skill Building/: SKILL.md
images/: README.md
oni-calculator/: .gitignore  Cargo.toml
oni-calculator/src/: calculator.rs  db.rs  extract.rs  main.rs  models.rs
